AFI-0006 docker pusshed

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,14 +18,14 @@ pipeline{
         }
         stage("build image"){
             steps{
-                sh 'docker build -t calc:1.0 .'
+                sh 'docker build -t murphy961/spe_devops:1.0 .'
             }
         }
-//         stage("Pushing the docker Image to Docker Hub"){
-// //             steps{
-// //                 sh 'docker login -u "murphy961" -p "Dockerhub@961"'
-// //                 sh 'docker push murphy961/spe_devops:1.0'
-// //             }
-//         }
+        stage("Pushing the docker Image to Docker Hub"){
+            steps{
+                sh 'docker login -u "murphy961" -p "Dockerhub@961"'
+                sh 'docker push murphy961/spe_devops:1.0'
+            }
+        }
     }
 }
