AFI-0007 ansible configured

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,15 +16,15 @@ pipeline{
                 sh 'mvn test'
             }
         }
-        stage("build image"){
-            steps{
-                sh 'docker build -t murphy961/spe_devops:1.0 .'
-            }
-        }
-        stage("Pushing the docker Image to Docker Hub"){
+        stage("build image"){z`
             steps{
                 sh 'docker login -u "murphy961" -p "Dockerhub@961"'
                 sh 'docker push murphy961/spe_devops:1.0'
+            }
+        }
+        stage("Ansible Stage"){
+            steps{
+                sh 'ansible-playbook playbook.yaml'
             }
         }
     }
