--- a/JenkinsFile
+++ b/JenkinsFile
@@ -27,5 +27,10 @@ pipeline{
                 sh 'docker push murphy961/spe_devops:1.0'
             }
         }
+        stage("Ansible Stage"){
+            steps{
+                sh 'ansible-playbook playbook.yaml'
+            }
+        }
     }
 }
