--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline{
         }
         stage("Building Stage"){
             steps{
-                sh 'mvn clean&&mvn package -DskipTests'
+                sh 'mvn clean install'
             }
         }
         stage("Testing Stage"){
