--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline{
         }
         stage("Building Stage"){
             steps{
-                sh 'mvn clean install'
+                sh 'mvn clean&&mvn compile&&mvn package'
             }
         }
         stage("Testing Stage"){
